fixed layout issues, added hover css styling to sm links

--- a/contact.css
+++ b/contact.css
@@ -11,6 +11,14 @@ body {
   z-index: 1050;
 }
 
+header {
+  height: 20vh;
+}
+
+#email:hover, #facebook:hover, #twitter:hover, #linkedin:hover, #github:hover {
+  opacity: 0.8;
+}
+
 .exit {
   height: 50px;
   width: 50px;
@@ -41,6 +49,11 @@ body {
 .menuItem {
   height: 20vh;
   width: 100%;
+}
+
+.menuItem a {
+  text-decoration: none;
+  color: white;
 }
 
 .menuItem p {
@@ -75,7 +88,6 @@ body {
   border-radius: 3px;
   box-shadow: 2px 3px #000;
   padding: 8px;
-  width: 15%;
 }
 
 nav.primary-nav {
